--- a/Dockerfile-jobprocessor
+++ b/Dockerfile-jobprocessor
@@ -6,6 +6,10 @@ COPY src/Wellcome.Dds/DlcsWebClient/DlcsWebClient.csproj DlcsWebClient/
 COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomain/Wellcome.Dds.AssetDomain.csproj Wellcome.Dds.AssetDomain/
 COPY src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj Wellcome.Dds.Common/
 COPY src/Wellcome.Dds/Utils/Utils.csproj Utils/
+COPY src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj Utils.Aws/
+
+COPY src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj Utils.Tests/
+COPY src/Wellcome.Dds/Wellcome.Dds.Common.Tests/Wellcome.Dds.Common.Tests.csproj Wellcome.Dds.Common.Tests/
 
 RUN dotnet restore "DlcsJobProcessor/DlcsJobProcessor.csproj"
 
@@ -13,6 +17,10 @@ RUN dotnet restore "DlcsJobProcessor/DlcsJobProcessor.csproj"
 COPY src/Wellcome.Dds/ ./
 WORKDIR "/src/DlcsJobProcessor"
 RUN dotnet build "DlcsJobProcessor.csproj" -c Release
+
+FROM build AS testrunner
+WORKDIR "/src"
+RUN dotnet test "Wellcome.Dds.sln" --filter Category\!=Database
 
 FROM build AS publish
 WORKDIR "/src/DlcsJobProcessor"
