don't use wl.org/player anywhere!

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -22,7 +22,7 @@
         "GoFile": "_status/dds-test.txt",
         "StatusProviderHeartbeat": "_status/jobprocessor-test.txt",
         "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-test/",
-        "PersistentPlayerUri": "https://wellcomelibrary.org/player/{0}",
+        "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
         "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
         "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
         "LinkedDataDomain": "https://wellcomelibrary.org",
