--- a/src/Wellcome.Dds/Utils/Utils.csproj
+++ b/src/Wellcome.Dds/Utils/Utils.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.5" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.5" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
