--- a/src/Wellcome.Dds/Wellcome.Dds.Auth.Web/Wellcome.Dds.Auth.Web.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Auth.Web/Wellcome.Dds.Auth.Web.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Utils\Utils.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
+    <ProjectReference Include="..\Wellcome.Dds.MillenniumClient\Wellcome.Dds.MillenniumClient.csproj" />
   </ItemGroup>
 
 </Project>
