refactor OAuth client out of storage service code

--- a/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories.Tests/Wellcome.Dds.AssetDomainRepositories.Tests.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories.Tests/Wellcome.Dds.AssetDomainRepositories.Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mets\" />
+  </ItemGroup>
+
 </Project>
