--- a/src/Wellcome.Dds/Wellcome.Dds.Auth.Web/Wellcome.Dds.Auth.Web.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Auth.Web/Wellcome.Dds.Auth.Web.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OAuth2\OAuth2.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
     <ProjectReference Include="..\Wellcome.Dds.MillenniumClient\Wellcome.Dds.MillenniumClient.csproj" />
