add a passthrough authenticator for testing

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -32,6 +32,14 @@
     "BatchSize": 100,
     "PreventSynchronisation": false
   },
+  "SierraRestAPI": {
+    "TokenEndPoint": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/token",
+    "Scope": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5",
+    "ClientId": "xxx",
+    "ClientSecret": "xxx",
+    "PatronValidateUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/validate",
+    "PatronFindUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/find"
+  },
   "Dds": {
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   }
