--- a/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="AWSSDK.SecurityToken" Version="3.3.105.31" />
+      <PackageReference Include="Community.Microsoft.Extensions.Caching.PostgreSql" Version="1.0.30" />
       <PackageReference Include="EFCore.NamingConventions" Version="1.1.0" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.6" />
       <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="3.1.5" />
