Read redirectUrl from config
removed testLogin as test redirect can be set in local appsettings

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -41,6 +41,7 @@
     "PatronFindUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/find"
   },
   "Dds": {
-    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
+    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas"
   }
 }
