Refactor log views to new controller and use links to Kibana

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -33,10 +33,12 @@
         "EarliestJobDateTime": "2016-07-07",
         "MinimumJobAgeMinutes": 0,
         "CacheBuster": "TODO - may not need these but if we do it's an object { }",
-        "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
-        "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
-        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
         "GoobiCall": "DO NOT CALL"
+    },
+    "Dash": {
+        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
+        "JobProcessorName": "job-processor-stageprd",
+        "WorkflowProcessorName": "workflow-processor-stageprd"
     },
     "Storage": {
         "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
