--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-[Ll]og/
-[Ll]ogs/
+[Ll]og/*
+[Ll]ogs/*
+
+!Views/Log/
+!Models/Log/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
