--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -31,10 +31,11 @@
         "EarliestJobDateTime": "2016-07-07",
         "MinimumJobAgeMinutes": 0,
         "CacheBuster": "TODO - may not need these but if we do it's an object { }",
-        "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
-        "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
-        "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
         "GoobiCall": "DO NOT CALL"
+    },
+    "Dash": {
+        "JobProcessorName": "job-processor-prod",
+        "WorkflowProcessorName": "workflow-processor-prod"
     },
     "Dlcs": {
         "CustomerDefaultSpace": 5
