--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -31,5 +31,10 @@
     "ResourceEntryPoint": "https://dlcs.io/",
     "BatchSize": 100,
     "PreventSynchronisation": false
+  },
+  "Dash": {
+    "LoggingFormat": "https://logging.wellcomecollection.org/app/kibana#/discover?_a=(columns:!(log),index:'978cbc80-af0d-11ea-b454-cb894ee8b269',query:(language:lucene,query:'service_name:%20%22{0}%22'))",
+    "JobProcessorName": "",
+    "WorkflowProcessorName": ""
   }
 }
