WordsAndPictures, with typed approach to BinaryObjectCache Options

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging-Prod.json
@@ -48,14 +48,14 @@
         "PreferCachedStorageMap": false,
         "MaxAgeStorageMap": 180
     },
-    "BinaryObjectCache": {
-        "StorageMaps": {
-            "AvoidCaching": false,
-            "AvoidSaving": false,
-            "WriteFailThrowsException": true,
-            "Container": "wellcomecollection-stage-iiif-storagemaps",
-            "Prefix": "stgmap-",
-            "MemoryCacheSeconds": 180
-        }
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Prefix": "stgmap-",
+      "MemoryCacheSeconds": 180
     }
+  }
 }
