--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -50,7 +50,7 @@
     "MaxAgeStorageMap": 180
   },
   "BinaryObjectCache": {
-    "StorageMaps": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "AvoidCaching": false,
       "AvoidSaving": false,
       "WriteFailThrowsException": true,
