--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -46,7 +46,7 @@
     "MaxAgeStorageMap": 180
   },
   "BinaryObjectCache": {
-    "StorageMaps": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "AvoidCaching": false,
       "AvoidSaving": false,
       "WriteFailThrowsException": true,
