--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -49,16 +49,16 @@
         "PreferCachedStorageMap": false,
         "MaxAgeStorageMap": 180
     },
-    "BinaryObjectCache": {
-        "StorageMaps": {
-            "AvoidCaching": false,
-            "AvoidSaving": false,
-            "WriteFailThrowsException": true,
-            "Container": "wellcomecollection-iiif-storagemaps",
-            "Prefix": "map-",
-            "MemoryCacheSeconds": 180
-        }
-    },
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-iiif-storagemaps",
+      "Prefix": "map-",
+      "MemoryCacheSeconds": 180
+    }
+  },
     "AzureAd": {
         "Instance": "https://login.microsoftonline.com/",
         "Domain": "wellcomecloud.onmicrosoft.com",
