--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -45,14 +45,14 @@
         "PreferCachedStorageMap": false,
         "MaxAgeStorageMap": 180
     },
-    "BinaryObjectCache": {
-        "StorageMaps": {
-            "AvoidCaching": false,
-            "AvoidSaving": false,
-            "WriteFailThrowsException": true,
-            "Container": "wellcomecollection-iiif-storagemaps",
-            "Prefix": "map-",
-            "MemoryCacheSeconds": 180
-        }
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-iiif-storagemaps",
+      "Prefix": "map-",
+      "MemoryCacheSeconds": 180
     }
+  }
 }
