Add /presentation endpoints to return v2 or v3 of iiif-presi
This implements basic versions of /presentation/{bnumb} using conneg and
/presentation/v2/{bnum}, /presentation/v3/{bnum} for specific versions

--- a/Dockerfile-dashboard
+++ b/Dockerfile-dashboard
@@ -26,7 +26,7 @@ RUN dotnet build "Wellcome.Dds.Dashboard.csproj" -c Release
 
 FROM build AS testrunner
 WORKDIR "/src"
-RUN dotnet test "Wellcome.Dds.sln" --filter Category\!=Database
+RUN dotnet test "Wellcome.Dds.sln" --filter "Category!=Database&Category!=Manual"
 
 FROM build AS publish
 WORKDIR "/src/Wellcome.Dds.Dashboard"
