--- a/Dockerfile-iiifbuilder
+++ b/Dockerfile-iiifbuilder
@@ -22,7 +22,7 @@ RUN dotnet build "Wellcome.Dds.Server.csproj" -c Release
 
 FROM build AS testrunner
 WORKDIR "/src"
-RUN dotnet test "Wellcome.Dds.sln" --filter Category\!=Database
+RUN dotnet test "Wellcome.Dds.sln" --filter "Category!=Database&Category!=Manual"
 
 FROM build AS publish
 WORKDIR "/src/Wellcome.Dds.Server"
