--- a/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/Wellcome.Dds.Server.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DlcsWebClient\DlcsWebClient.csproj" />
+      <ProjectReference Include="..\IIIF\IIIF.csproj" />
       <ProjectReference Include="..\Wellcome.Dds.AssetDomainRepositories\Wellcome.Dds.AssetDomainRepositories.csproj" />
       <ProjectReference Include="..\Wellcome.Dds.Auth.Web\Wellcome.Dds.Auth.Web.csproj" />
       <ProjectReference Include="..\Wellcome.Dds.Common\Wellcome.Dds.Common.csproj" />
