change IIIFBuilder RunnerOption

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -34,10 +34,10 @@
   },
   "AllowedHosts": "*",
   "WorkflowProcessor": {
-    "RegisterImages" : true,
-    "RefreshFlatManifestations" : false,
-    "RebuildPackageCaches" : false,
-    "RebuildTextCaches" : false,
-    "RebuildAllAnnoPageCaches" : false
+    "RegisterImages": true,
+    "RefreshFlatManifestations": false,
+    "RebuildIIIF3": false,
+    "RebuildTextCaches": false,
+    "RebuildAllAnnoPageCaches": false
   }
 }
