Get user by username or barcode

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -38,7 +38,8 @@
     "ClientId": "xxx",
     "ClientSecret": "xxx",
     "PatronValidateUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/validate",
-    "PatronFindUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/find"
+    "PatronFindUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/find",
+    "PatronGetUrl": "https://libsys.wellcomelibrary.org/iii/sierra-api/v5/patrons/"
   },
   "Dds": {
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
