Tidy appSettings for all services

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -24,38 +24,16 @@
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
     "GoFile": "_status/dds-stage.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-stage.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/",
-    "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
-    "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
-    "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
-    "LinkedDataDomain": "https://wellcomelibrary.org",
-    "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
-    "AvoidCaching": false,
-    "EarliestJobDateTime": "2016-07-07",
-    "MinimumJobAgeMinutes": 0,
-    "CacheBuster": "TODO - may not need these but if we do it's an object { }",
-    "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
-    "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
-    "DashBodyInject": "background-image:url(/img/staging.png); background-repeat;",
-    "GoobiCall": "DO NOT CALL"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
-    "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
-    "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
-    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
-    "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-    "PreferCachedStorageMap": false,
-    "MaxAgeStorageMap": 180
+    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "AvoidCaching": false,
-      "AvoidSaving": false,
-      "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-storagemaps",
-      "Prefix": "stgmap-",
-      "MemoryCacheSeconds": 180
+      "Prefix": "stgmap-"
     }
   }
 }
