--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Development.Example.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Development.Example.json
@@ -8,42 +8,7 @@
   },
   "Dlcs": {
     "ApiKey": "xxxxxxxxxxxx",
-    "ApiSecret": "xxxxxxxxxxxxxxxxxxxxxxxxx",
-    "CustomerId": 2,
-    "CustomerName": "Wellcome",
-    "CustomerDefaultSpace": 6,
-    "ApiEntryPoint": "xxx",
-    "ResourceEntryPoint": "xxx",
-    "avDerivativeTemplateVideo": "xxx",
-    "avDerivativeTemplateAudio": "xxx"
-  },
-  "Dds": {
-    "GoFile": "<a sentinel file stored in S3>\\DDS_LIVE\\dds.txt",
-    "StatusProviderHeartbeat": "DDS_DEV_PRELIVE\\jobprocessor.txt",
-    "StatusProviderLogSpecialFile": "\\DDS_DEV_PRELIVE\\jobprocessor-diagnostics.txt"
-  },
-  "Dashboard": {
-    "avoidCaching": false,
-    "EarliestJobDateTime": "2016-07-07",
-    "MinimumJobAgeMinutes": 0,
-    "CacheBuster": "TODO - may not need these but if we do it's an object { }",
-    "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
-    "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log"
-  },
-  "ArchiveStorage": {
-    "StorageApiTemplate": "xxx",
-    "TokenEndPoint": "xxx",
-    "Scope": "xxx",
-    "ClientId": "xxxxxxxxxxxxxxx",
-    "ClientSecret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
-    "StorageApiTemplateIngest": "xxx",
-    "ScopeIngest": "xxx",
-    "PreventSynchronisation": false,
-    "StorageMapCache": "S3 Bucket equivalent of \\DDSLiveCache\\storageMaps\\production-min\" />",
-    "MapHttpRuntimeCacheSeconds": 3600,
-    "PreferCachedStorageMap": false,
-    "GoobiCall": "DO NOT CALL",
-    "dash-body-inject": " style=background-image:url(/content/staging.png); background-repeat;"
+    "ApiSecret": "xxxxxxxxxxxxxxxxxxxxxxxxx"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
