--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -1,67 +1,43 @@
 ﻿{
-    "Serilog": {
-        "MinimumLevel": {
-            "Default": "Debug",
-            "Override": {
-                "Microsoft": "Warning",
-                "System": "Warning"
-            }
-        },
-        "WriteTo": [
-            {
-                "Name": "Console"
-            }
-        ],
-        "Properties": {
-            "ApplicationName": "Dashboard",
-            "Environment": "Production"
-        }
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     },
-    "Dds": {
-        "StatusContainer": "wellcomecollection-iiif-presentation",
-        "GoFile": "_status/dds.txt",
-        "StatusProviderHeartbeat": "_status/jobprocessor.txt",
-        "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
-        "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
-        "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
-        "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
-        "LinkedDataDomain": "https://wellcomelibrary.org",
-        "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
-        "AvoidCaching": false,
-        "EarliestJobDateTime": "2016-07-07",
-        "MinimumJobAgeMinutes": 0,
-        "CacheBuster": "TODO - may not need these but if we do it's an object { }",
-        "GoobiCall": "DO NOT CALL"
-    },
-    "Dash": {
-        "JobProcessorName": "job-processor-prod",
-        "WorkflowProcessorName": "workflow-processor-prod"
-    },
-    "Dlcs": {
-        "CustomerDefaultSpace": 5
-    },
-    "Storage": {
-        "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
-        "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
-        "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
-        "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-        "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
-        "PreferCachedStorageMap": false,
-        "MaxAgeStorageMap": 180
-    },
-  "BinaryObjectCache": {
-    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "AvoidCaching": false,
-      "AvoidSaving": false,
-      "WriteFailThrowsException": true,
-      "Container": "wellcomecollection-iiif-storagemaps",
-      "Prefix": "map-",
-      "MemoryCacheSeconds": 180
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Properties": {
+      "ApplicationName": "Dashboard",
+      "Environment": "Production"
     }
   },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "wellcomecloud.onmicrosoft.com",
-        "CallbackPath": "/signin-oidc"
+  "Dds": {
+    "StatusContainer": "wellcomecollection-iiif-presentation",
+    "GoFile": "_status/dds.txt",
+    "StatusProviderHeartbeat": "_status/jobprocessor.txt",
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/"
+  },
+  "Dash": {
+    "JobProcessorName": "job-processor-prod",
+    "WorkflowProcessorName": "workflow-processor-prod"
+  },
+  "Dlcs": {
+    "CustomerDefaultSpace": 5
+  },
+  "Storage": {
+    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
+  },
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "Container": "wellcomecollection-iiif-storagemaps",
+      "Prefix": "map-"
     }
+  }
 }
