--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -32,9 +32,53 @@
     "BatchSize": 100,
     "PreventSynchronisation": false
   },
+  "Storage": {
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
+    "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
+    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
+    "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+    "StorageMapCache": "",
+    "MemoryCacheSeconds": 3600,
+    "PreferCachedStorageMap": false,
+    "MaxAgeStorageMap": 180
+  },
+  "Dds": {
+    "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+    "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
+    "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
+    "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
+    "LinkedDataDomain": "https://wellcomelibrary.org",
+    "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
+    "AvoidCaching": false,
+    "EarliestJobDateTime": "2016-07-07",
+    "MinimumJobAgeMinutes": 0,
+    "CacheBuster": "TODO - may not need these but if we do it's an object { }",
+    "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
+    "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
+    "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
+    "GoobiCall": "DO NOT CALL",
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
+    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas"
+  },
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Prefix": "stgmap-",
+      "MemoryCacheSeconds": 180
+    }
+  },
   "Dash": {
     "LoggingFormat": "https://logging.wellcomecollection.org/app/kibana#/discover?_a=(columns:!(log),index:'978cbc80-af0d-11ea-b454-cb894ee8b269',query:(language:lucene,query:'service_name:%20%22{0}%22'))",
     "JobProcessorName": "",
     "WorkflowProcessorName": ""
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "wellcomecloud.onmicrosoft.com",
+    "CallbackPath": "/signin-oidc"
   }
 }
