--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Development.Example.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Development.Example.json
@@ -5,5 +5,17 @@
   "ConnectionStrings": {
     "Dds": "<postgres-connection-string-for-Dds-Database>",
     "DdsInstrumentation": "<postgres-connection-string-for-DdsInstrumentation-Database>"
+  },
+  "Dlcs": {
+    "ApiKey": "*****",
+    "ApiSecret": "*****"
+  },
+  "SierraRestAPI": {
+    "ClientId": "xxx",
+    "ClientSecret": "xxx"
+  },
+  "Dds": {
+    "DlcsOriginUsername": "xxx",
+    "DlcsOriginPassword": "xxx"
   }
 }
