--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -23,6 +23,7 @@
   "Dlcs": {
     "CustomerId": 2,
     "CustomerName": "Wellcome",
+    "CustomerDefaultSpace": 6,
     "SkeletonNamedPdfTemplate": "https://dlcs.io/pdf/wellcome/pdf/{0}/{1}",
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "PortalPageTemplate": "https://portal.dlcs.io/Image.aspx?space={0}&image={1}",
@@ -30,7 +31,20 @@
     "ApiEntryPoint": "https://api.dlcs.io/",
     "ResourceEntryPoint": "https://dlcs.io/",
     "BatchSize": 100,
-    "PreventSynchronisation": false
+    "PreventSynchronisation": false,
+    "PdfQueryName": "pdf-item",
+    "PdfQueryType": "sequenceIndex"
+  },
+  "Storage": {
+    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "TokenEndPoint": "https://auth.wellcomecollection.org/oauth2/token",
+    "Scope": "https://api.wellcomecollection.org/storage/v1/bags",
+    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
+    "ScopeIngest": "https://api.wellcomecollection.org/storage/v1/ingests",
+    "StorageMapCache": "",
+    "MemoryCacheSeconds": 3600,
+    "PreferCachedStorageMap": false,
+    "MaxAgeStorageMap": 180
   },
   "AllowedHosts": "*",
   "WorkflowProcessor": {
@@ -39,5 +53,47 @@
     "RebuildIIIF3": false,
     "RebuildTextCaches": false,
     "RebuildAllAnnoPageCaches": false
+  },
+  "Dds": {
+    "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+    "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
+    "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
+    "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
+    "LinkedDataDomain": "https://wellcomelibrary.org",
+    "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
+    "AvoidCaching": false,
+    "EarliestJobDateTime": "2016-07-07",
+    "MinimumJobAgeMinutes": 0,
+    "CacheBuster": "TODO - may not need these but if we do it's an object { }",
+    "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
+    "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
+    "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
+    "GoobiCall": "DO NOT CALL"
+  },
+  "BinaryObjectCache": {
+    "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-storagemaps",
+      "Prefix": "stgmap-",
+      "MemoryCacheSeconds": 180
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-text",
+      "Prefix": "stgtext-",
+      "MemoryCacheSeconds": 180
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "AvoidCaching": false,
+      "AvoidSaving": false,
+      "WriteFailThrowsException": true,
+      "Container": "wellcomecollection-stage-iiif-annotations",
+      "Prefix": "stgannos-",
+      "MemoryCacheSeconds": 180
+    }
   }
 }
