appsettings for WorkflowProcessor

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.json
@@ -69,7 +69,10 @@
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
-    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas"
+    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
