--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -49,10 +49,10 @@
   "AllowedHosts": "*",
   "WorkflowProcessor": {
     "RegisterImages": true,
-    "RefreshFlatManifestations": false,
-    "RebuildIIIF3": false,
-    "RebuildTextCaches": false,
-    "RebuildAllAnnoPageCaches": false
+    "RefreshFlatManifestations": true,
+    "RebuildIIIF3": true,
+    "RebuildTextCaches": true,
+    "RebuildAllAnnoPageCaches": true
   },
   "Dds": {
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
@@ -68,7 +68,8 @@
     "JobProcessorLog": "<firelens equivalent of> DlcsJobProcessor-ProcessQueue.log",
     "WorkflowProcessorLog": "<firelens equivalent of> WorkflowProcessor.log",
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
-    "GoobiCall": "DO NOT CALL"
+    "GoobiCall": "DO NOT CALL",
+    "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
