--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -21,7 +21,10 @@
     "StatusContainer": "wellcomecollection-iiif-presentation",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+    "PresentationContainer": "wellcomecollection-iiif-presentation",
+    "TextContainer": "wellcomecollection-iiif-text",
+    "AnnotationContainer": "wellcomecollection-iiif-annotations"
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5
