--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -23,7 +23,10 @@
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
     "GoFile": "_status/dds-stage.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-stage.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
