--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -18,6 +18,7 @@
     }
   },
   "Dds": {
+    "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-iiif-presentation",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
