--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -44,12 +44,8 @@
     "MaxAgeStorageMap": 180
   },
   "Dds": {
+    "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
-    "PersistentPlayerUri": "https://wellcomelibrary.org/item/{0}",
-    "PersistentCatalogueRecord": "https://search.wellcomelibrary.org/iii/encore/record/C__R{0}",
-    "EncoreBibliographicData": "https://search.wellcomelibrary.org/iii/queryapi/collection/bib/{0}?profiles=b(full)i(brief)&amp;format=xml",
-    "LinkedDataDomain": "https://wellcomelibrary.org",
-    "ManifestTemplate": "https://wellcomelibrary.org/iiif/{0}/manifest",
     "AvoidCaching": false,
     "EarliestJobDateTime": "2016-07-07",
     "MinimumJobAgeMinutes": 0,
