--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Staging.json
@@ -21,6 +21,7 @@
     "CustomerDefaultSpace": 6
   },
   "Dds": {
+    "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
     "GoFile": "_status/dds-stage.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-stage.txt",
