--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -21,6 +21,7 @@
     "CustomerDefaultSpace": 5
   },
   "Dds": {
+    "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-iiif-presentation",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
