--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -21,7 +21,7 @@
     "CustomerDefaultSpace": 6
   },
   "Dds": {
-    "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+    "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
     "GoFile": "_status/dds-test.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-test.txt",
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-test/"
