fix stageprd dash config and add logs to dash

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging-Prod.json
@@ -29,11 +29,13 @@
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "JobProcessorName": "job-processor-stageprd",
-    "WorkflowProcessorName": "workflow-processor-stageprd"
+    "WorkflowProcessorName": "workflow-processor-stageprd",
+    "DashboardName": "dashboard-stageprd",
+    "IIIFServerName": "iiif-builder-stageprd"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
-    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests"
+    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
