--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -26,7 +26,9 @@
   },
   "Dash": {
     "JobProcessorName": "job-processor-prod",
-    "WorkflowProcessorName": "workflow-processor-prod"
+    "WorkflowProcessorName": "workflow-processor-prod",
+    "DashboardName": "dashboard-prod",
+    "IIIFServerName": "iiif-builder-prod"
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5
