--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Staging.json
@@ -29,7 +29,9 @@
   "Dash": {
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "JobProcessorName": "job-processor-stage",
-    "WorkflowProcessorName": "workflow-processor-stage"
+    "WorkflowProcessorName": "workflow-processor-stage",
+    "DashboardName": "dashboard-stage",
+    "IIIFServerName": "iiif-builder-stage"
   },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
