--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -27,8 +27,8 @@
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-test/"
   },
   "Storage": {
-    "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
-    "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests"
+    "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
+    "StorageApiTemplateIngest": "https://api.wellcomecollection.org/storage/v1/ingests"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
