Add missing dds config

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -23,6 +23,9 @@
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-iiif-presentation",
+    "PresentationContainer": "wellcomecollection-iiif-presentation",
+    "TextContainer": "wellcomecollection-iiif-text",
+    "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/"
