--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -23,6 +23,9 @@
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
     "GoFile": "_status/dds-stage.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-stage.txt",
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-stage/"
