--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -55,6 +55,9 @@
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
     "StatusContainer": "wellcomecollection-stage-iiif-presentation",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
     "AvoidCaching": false,
     "EarliestJobDateTime": "2016-07-07",
     "MinimumJobAgeMinutes": 0,
