--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging-Prod.json
@@ -22,6 +22,9 @@
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation",
+    "TextContainer": "wellcomecollection-stage-iiif-text",
+    "AnnotationContainer": "wellcomecollection-stage-iiif-annotations",
     "GoFile": "_status/dds-test.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor-test.txt",
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics-test/"
