refactor client catalogue and workflowprocessor to use tool lib

--- a/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "WorkflowProcessor": {
       "commandName": "Project",
       "launchBrowser": false,
+      "commandLineArgs": "-- --populate-file /home/tomcrane/git/wellcomecollection/iiif-builder/src/Wellcome.Dds/WorkflowProcessor.Tests/examples.txt",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
