Split iiif3 + 2 generation to separate methods
Renamed WF arg RebuildIIIF3 -> RebuildIIIF.
Removed auto-generation of IIIF2 from BuildAllManifestations and
introduced new method for this.
Remove 2, 3 props from BuildResult.
Remove calls to IIIIFBuilder.Serialise() and use .AsJson() instead

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -48,7 +48,7 @@
   "WorkflowProcessor": {
     "RegisterImages": true,
     "RefreshFlatManifestations": true,
-    "RebuildIIIF3": true,
+    "RebuildIIIF": true,
     "RebuildTextCaches": true,
     "RebuildAllAnnoPageCaches": true
   },
