--- a/Dockerfile-workflowprocessor
+++ b/Dockerfile-workflowprocessor
@@ -8,11 +8,13 @@ COPY src/Wellcome.Dds/Utils/Utils.csproj Utils/
 COPY src/Wellcome.Dds/Utils.Aws/Utils.Aws.csproj Utils.Aws/
 COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomain/Wellcome.Dds.AssetDomain.csproj Wellcome.Dds.AssetDomain/
 COPY src/Wellcome.Dds/Wellcome.Dds.Common/Wellcome.Dds.Common.csproj Wellcome.Dds.Common/
+COPY src/Wellcome.Dds/Wellcome.Dds.Repositories/Wellcome.Dds.Repositories.csproj Wellcome.Dds.Repositories/
 
 COPY src/Wellcome.Dds/Utils.Tests/Utils.Tests.csproj Utils.Tests/
 COPY src/Wellcome.Dds/Wellcome.Dds.AssetDomainRepositories.Tests/Wellcome.Dds.AssetDomainRepositories.Tests.csproj Wellcome.Dds.AssetDomainRepositories.Tests/
 COPY src/Wellcome.Dds/WorkflowProcessor.Tests/WorkflowProcessor.Tests.csproj WorkflowProcessor.Tests/
 COPY src/Wellcome.Dds/Wellcome.Dds.Common.Tests/Wellcome.Dds.Common.Tests.csproj Wellcome.Dds.Common.Tests/
+COPY src/Wellcome.Dds/Wellcome.Dds.Repositories.Tests/Wellcome.Dds.Repositories.Tests.csproj Wellcome.Dds.Repositories.Tests/
 
 RUN dotnet restore "WorkflowProcessor/WorkflowProcessor.csproj"
 
