Add missing appsettings for dds.server prod

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -38,6 +38,14 @@
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
       "Container": "wellcomecollection-iiif-storagemaps",
       "Prefix": "map-"
+    },
+    "Wellcome.Dds.WordsAndPictures.Text": {
+      "Container": "wellcomecollection-iiif-text",
+      "Prefix": "text-"
+    },
+    "Wellcome.Dds.WordsAndPictures.SimpleAltoServices.AnnotationPageList": {
+      "Container": "wellcomecollection-iiif-annotations",
+      "Prefix": "annos-"
     }
   }
 }
