first pass removal of dlcs.io paths - WIP!

--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.Production.json
@@ -18,7 +18,8 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 5
+    "CustomerDefaultSpace": 5,
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif.wellcomecollection.org",
