--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -28,7 +28,8 @@
     "AnnotationContainer": "wellcomecollection-iiif-annotations"
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 5
+    "CustomerDefaultSpace": 5,
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
