--- a/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
+++ b/src/Wellcome.Dds/DlcsJobProcessor/appsettings.json
@@ -29,10 +29,9 @@
     "CustomerId": 2,
     "CustomerName": "Wellcome",
     "CustomerDefaultSpace": 6,
-    "SkeletonNamedPdfTemplate": "https://dlcs.io/pdf/wellcome/pdf/{0}/{1}",
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
     "BatchSize": 100,
     "PreventSynchronisation": false,
     "PdfQueryName": "pdf-item",
@@ -61,7 +60,7 @@
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
-    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas"
+    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
