--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.Production.json
@@ -31,7 +31,8 @@
     "IIIFServerName": "iiif-builder-prod"
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 5
+    "CustomerDefaultSpace": 5,
+    "ResourceEntryPoint": "https://iiif.wellcomecollection.org/"
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
