--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/appsettings.json
@@ -23,10 +23,9 @@
   "Dlcs": {
     "CustomerId": 2,
     "CustomerName": "Wellcome",
-    "SkeletonNamedPdfTemplate": "https://dlcs.io/pdf/wellcome/pdf/{0}/{1}",
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
     "BatchSize": 100,
     "PreventSynchronisation": false
   },
@@ -53,7 +52,7 @@
     "DashBodyInject": "background-image:url(/dash/img/staging.png); background-repeat;",
     "GoobiCall": "DO NOT CALL",
     "ApiWorkTemplate": "https://api.wellcomecollection.org/catalogue/v2/works",
-    "DlcsReturnUrl": "https://dlcs.io/auth/2/fromcas"
+    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
