--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Staging-Prod.json
@@ -17,7 +17,8 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 6
+    "CustomerDefaultSpace": 6,
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-test.wellcomecollection.org",
