--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Staging.json
@@ -18,7 +18,8 @@
     }
   },
   "Dlcs": {
-    "CustomerDefaultSpace": 6
+    "CustomerDefaultSpace": 6,
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/"
   },
   "Dds": {
     "LinkedDataDomain": "https://iiif-stage.wellcomecollection.org",
