--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.json
@@ -24,10 +24,9 @@
     "CustomerId": 2,
     "CustomerName": "Wellcome",
     "CustomerDefaultSpace": 6,
-    "SkeletonNamedPdfTemplate": "https://dlcs.io/pdf/wellcome/pdf/{0}/{1}",
     "SkeletonNamedQueryTemplate": "https://dlcs.io/iiif-resource/wellcome/preview/{0}/{1}",
     "ApiEntryPoint": "https://api.dlcs.io/",
-    "ResourceEntryPoint": "https://dlcs.io/",
+    "ResourceEntryPoint": "https://iiif-test.wellcomecollection.org/",
     "BatchSize": 100,
     "PreventSynchronisation": false,
     "PdfQueryName": "pdf-item",
