wip on collecting C&D state as we go

--- a/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "WorkflowProcessor": {
       "commandName": "Project",
       "launchBrowser": false,
-      "commandLineArgs": "",
+      "commandLineArgs": "--chem",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
