--- a/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/appsettings.Production.json
@@ -25,7 +25,8 @@
     "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
     "PresentationContainer": "wellcomecollection-iiif-presentation",
     "TextContainer": "wellcomecollection-iiif-text",
-    "AnnotationContainer": "wellcomecollection-iiif-annotations"
+    "AnnotationContainer": "wellcomecollection-iiif-annotations",
+    "DlcsReturnUrl": "https://iiif.wellcomecollection.org/auth/fromcas"
   },
   "Dlcs": {
     "CustomerDefaultSpace": 5,
