--- a/src/Wellcome.Dds/PdfThumbGenerator/appsettings.json
+++ b/src/Wellcome.Dds/PdfThumbGenerator/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft": "Information"
     }
   },
+  "Dds": {
+    "PresentationContainer": "wellcomecollection-stage-iiif-presentation"
+  },
   "Storage": {
     "StorageApiTemplate": "https://api-stage.wellcomecollection.org/storage/v1/bags/digitised/{0}",
     "StorageApiTemplateIngest": "https://api-stage.wellcomecollection.org/storage/v1/ingests",
@@ -19,8 +22,8 @@
   },
   "BinaryObjectCache": {
     "Wellcome.Dds.AssetDomainRepositories.Mets.WellcomeBagAwareArchiveStorageMap": {
-      "AvoidCaching": false,
-      "AvoidSaving": false,
+      "AvoidCaching": true,
+      "AvoidSaving": true,
       "WriteFailThrowsException": true,
       "Container": "wellcomecollection-stage-iiif-storagemaps",
       "Prefix": "stgmap-",
