minium job age 10 mins on Prod

--- a/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
+++ b/src/Wellcome.Dds/WorkflowProcessor/appsettings.Production.json
@@ -29,7 +29,8 @@
     "AnnotationContainer": "wellcomecollection-iiif-annotations",
     "GoFile": "_status/dds.txt",
     "StatusProviderHeartbeat": "_status/jobprocessor.txt",
-    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/"
+    "StatusProviderLogSpecialFile": "_status/_jobprocessor-diagnostics/",
+    "MinimumJobAgeMinutes": 10
   },
   "Storage": {
     "StorageApiTemplate": "https://api.wellcomecollection.org/storage/v1/bags/digitised/{0}",
